kubernetes-examples/deployment-with-volume.yaml
# Deployment with a config map.
# Use these for the config maps:
#   wget -q https://kubernetes.io/examples/configmap/game.properties
#   wget -q https://k8s.io/examples/configmap/ui.properties
#
# To validate env vars, use 'kubectl exec <pod_name> -- env'
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: test-container
          image: nginx
          volumeMounts:
            - name: game-config-volume
              mountPath: /etc/config
          ports:
            - containerPort: 80
      volumes:
        - name: game-config-volume
          configMap:
            name: game-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
