kubernetes-examples/deployment-with-ingress.yaml
# Deployment with a config map.
# Use these for the config maps:
#   wget -q https://kubernetes.io/examples/configmap/game.properties
#   wget -q https://k8s.io/examples/configmap/ui.properties
#
# To validate env vars, use 'kubectl exec <pod_name> -- env'
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin-container
          image: kennethreitz/httpbin:latest
          volumeMounts:
            - name: game-config-volume
              mountPath: /etc/config
          ports:
            - containerPort: 80
      volumes:
        - name: game-config-volume
          configMap:
            name: game-config
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
---
# Follow instructions to install nginx-ingress-controller in KinD
# https://kind.sigs.k8s.io/docs/user/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  ingressClassName: nginx
  rules:
# Requires adding host value to /etc/hosts
    - host: mdas.fake.domain
      http:
        paths:
          # IMPORTANT: cannot use /, alwasy suse sub-context
          - pathType: Prefix
            path: "/get"
            backend:
              service:
                name: httpbin-svc
                port:
                  number: 8080
          - pathType: Prefix
            path: "/post"
            backend:
              service:
                name: httpbin-svc
                port:
                  number: 8080
          - pathType: Prefix
            path: "/put"
            backend:
              service:
                name: httpbin-svc
                port:
                  number: 8080
